@@ -16,10 +16,10 @@ public:
 	bool        RipCD();
 
 private:
-	bool        Init(int iTrack, const char* strFile, MUSIC_INFO::CMusicInfoTag* infoTag = NULL);
+	bool        Init(const CStdString& strTrackFile, const CStdString& strFile, MUSIC_INFO::CMusicInfoTag* infoTag = NULL);
 	bool        DeInit();
 	int         RipChunk(int& nPercent);
-	bool        Rip(int iTrack, const char* strFileName, MUSIC_INFO::CMusicInfoTag& infoTag);
+	bool        Rip(const CStdString& strTrackFile, const CStdString& strFileName, MUSIC_INFO::CMusicInfoTag& infoTag);
 	char*       GetExtension(int iEncoder);
 
 	CEncoder*   m_pEncoder;
